Fix icons overlapping header

--- a/client/app.sass
+++ b/client/app.sass
@@ -33,7 +33,7 @@
     position: sticky
     top: 0
     width: 100%
-    z-index: 1
+    z-index: 10
     background-color: #fafafa
     border-bottom: 1px solid #d5d5d5
     box-shadow: 0 1px 10px rgba(0, 0, 0, 0.05)
